Bugfix Nodemon Package Vulnerability

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dialogflow-fulfillment": "^0.6.1",
+    "dialogflow-fulfillment": "git+https://github.com/anshumankmr/dialogflow-fulfillment-nodejs.git",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "express-validation": "^4.1.0",
@@ -29,7 +29,7 @@
     "mongodb": "4.7",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.1",
-    "nodemon": "^1.3.3",
+    "nodemon": "^2.0.18",
     "passport": "^0.6.0",
     "puppeteer": "^14.4.0",
     "socket.io-client": "^4.5.1",
